*SVN*

* Reuse named route helper module between Routing reloads. Use remove_method to delete named route methods after each load. Since the module is never collected, this fixes a significant memory leak. [Nicholas Seckar]

* ActionView::Base.erb_variable accessor names the buffer variable used to render templates. Defaults to _erbout; use _buf for erubis.  [Rick Olson]

* assert_select_rjs :remove.  [Dylan Egan]

* Always clear model associations from session.  #4795 [sd@notso.net, andylien@gmail.com]

* Update to Prototype 1.5.0_rc2. [Sam Stephenson]

* Remove JavaScriptLiteral in favor of ActiveSupport::JSON::Variable. [Sam Stephenson]

* Sync ActionController::StatusCodes::STATUS_CODES with http://www.iana.org/assignments/http-status-codes.  #6586 [dkubb]

* Multipart form values may have a content type without being treated as uploaded files if they do not provide a filename.  #6401 [Andreas Schwarz, Jeremy Kemper]

* assert_response supports symbolic status codes.  #6569 [Kevin Clark]
    assert_response :ok
    assert_response :not_found
    assert_response :forbidden

* Cache parsed query parameters.  #6559 [Stefan Kaes]

* Deprecate JavaScriptHelper#update_element_function, which is superseeded by RJS [Thomas Fuchs]

* pluralize helper interprets nil as zero.  #6474 [pope]

* Fix invalid test fixture exposed by stricter Ruby 1.8.5 multipart parsing.  #6524 [Bob Silva]

* Set ActionView::Base.default_form_builder once rather than passing the :builder option to every form or overriding the form helper methods.  [Jeremy Kemper]

* Deprecate expire_matched_fragments. Use expire_fragment instead.  #6535 [Bob Silva]

* Update to latest Prototype, which doesn't serialize disabled form elements, adds clone() to arrays, empty/non-string Element.update() and adds a fixes excessive error reporting in WebKit beta versions [Thomas Fuchs]

* Deprecate start_form_tag and end_form_tag.  Use form_tag / '</form>' from now on.  [Rick]
